Fixed scrollbar code to remove it

--- a/GameSites/AGame: Styled/Style.css
+++ b/GameSites/AGame: Styled/Style.css
@@ -10,7 +10,7 @@
 	}
 
 	/* Hide scrollbar for Chrome, Safari and Opera */
-	.example::-webkit-scrollbar {
+	::-webkit-scrollbar {
 		display: none;
 	}
 
